- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    5.5.0 Beta, 5.5.0
 - 
    OS X Yosemite
 
- 
        1f843b7d1060a382dca7d42557d52af6009f6168
 
Instead of looking for qmlimportscanner where it's installed (~/Qt5.5.0/5.5/clang_64/bin on my machine, for example), macdeployqt tries to load it from a "bin" folder one level up from the directory it's run from.
I tried just creating a ../bin folder and placing a symlink to qmlimportscanner inside it. That allowed qmlimportscanner to run, but it threw a bunch of errors and didn't include the QtQuick dylibs in my app bundle.
qmlimportscanner does seem to work correctly if you run macdeployqt from where it's installed. This is the workaround I'm using:
pushd $QTDIR/bin
./macdeployqt $APPFULLPATH -verbose=3 -qmldir=$QMLDIRFULLPATH
popd
- is required for
 - 
                    
QTBUG-46863 Issues to be fixed before Qt 5.5.1
-         
 - Closed
 
 -