macdeployqt: Work around broken QLibraryInfo

Add fallback code path for locating qmlimportscanner
relative to the macdeployqt binary.

Task-number: QTBUG-46404
Change-Id: I9c837b5da518af45cef1292f9cd0422fccba8e5f
Reviewed-by: Morten Johan Sørvig <morten.sorvig@theqtcompany.com>